k8s-cd-scripts/jenkins/jenkins.yaml
---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops
  labels:
    k8s-app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: jenkins
  template:
    metadata:
      labels:
        k8s-app: jenkins
    spec:
      containers:
      - name: jenkins
        image: image.repo.vm/jenkins:2.154-slim
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: docker
          mountPath: /var/run/docker.sock
        - name: kube-config
          mountPath: /root/.kube/config
        ports:
        - containerPort: 8080
        - containerPort: 50000
      volumes:
        - name: jenkins-home
          hostPath:
            path: /var/www/webapps/jenkins
        - name: docker
          hostPath:
            path: /var/run/docker.sock
        - name: kube-config
          hostPath:
            path: /root/.kube/config
      serviceAccount: "jenkins-admin"

---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: devops
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - port: 8080
      name: jenkins
      nodePort: 32888
      targetPort: 8080
    - port: 50000
      name: jenkins-agent
      nodePort: 50000
      targetPort: 50000
  type: NodePort
  selector:
    k8s-app: jenkins

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
spec:
  rules:
  - host: jenkins.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
